# courseCPP_TeamE

./: .gitignore  CMakeLists.txt  README.md  UML.wsd  run.sh  runcppcheck.sh  runsim.sh  runtest.sh  setupvcan.sh
documentation/: project_overview.txt
ext/: CMakeLists.txt
ext/app/: CMakeLists.txt
ext/app/avic/include/: cluster_updater.h  your_stuff.h
ext/app/avic/qml/: DashboardGaugeStyle.qml  IconGaugeStyle.qml  TachometerStyle.qml  ValueSource.qml  cluster-gauges.qml
ext/app/avic/qml/images/: images.qrc
ext/app/avic/src/: cluster_updater.cpp  your_stuff.cpp
ext/lib/: CMakeLists.txt
ext/lib/libcanio/include/canio/: can_common.h
ext/lib/libcanio/src/: can_common.cpp
share/: can  can_class.cpp  can_class.h  can_class.hpp  frames.cpp  frames.hpp  message_handler.cpp  message_handler.hpp  run_ecu.hpp
share/vcan/: reader  writer
src/ECM/: ECM.cpp  ECM.hpp  caclRPM.cpp  calcFuel.cpp  calcFuel.hpp  calcRPM.cpp  calcRPM.hpp  driverInfo.cpp  driverInfo.hpp  main.cpp  message_handler.cpp  message_handler.hpp
src/TCM/: TCM.cpp  TCM.hpp  gearbox.cpp  gearbox.hpp  main.cpp
src/displayHandler/: data_class.cpp  data_class.hpp  display_class.cpp  display_class.h  display_class.hpp  display_handler.cpp  display_handler.hpp  main.cpp
src/inputHandler/: conversion.cpp  conversion.hpp  inputHandlerFrame.h  key_converter.cpp  key_converter.hpp  key_input_X11.cpp  key_input_X11.hpp  main.cpp  mainAN.cpp
test/: CMakeLists.txt  canClass_test.cpp  driverInfo_test.cpp  test_gearbox.cpp  test_test.cpp
