cmake_minimum_required(VERSION 3.5.1)
project(simulator)
include_directories(share)
add_library(canIO share/can_class.cpp)
add_executable(inputHandler src/inputHandler/main.cpp src/inputHandler/key_converter.cpp src/inputHandler/conversion.cpp share/frames.cpp)
target_link_libraries(inputHandler PRIVATE ncurses pthread canIO) # should it be PRIVATE?
add_executable(ECM src/ECM/main.cpp src/ECM/ECM.cpp src/ECM/calcFuel.cpp src/ECM/driverInfo.cpp src/ECM/calcRPM.cpp share/frames.cpp src/TCM/gearbox.cpp) 
target_link_libraries(ECM PRIVATE pthread canIO)
add_executable(displayHandler src/displayHandler/main.cpp src/displayHandler/display_class.cpp src/displayHandler/display_handler.cpp src/displayHandler/data_class.cpp share/frames.cpp) 
target_link_libraries(displayHandler PRIVATE pthread canIO)
add_executable(TCM src/TCM/main.cpp src/TCM/TCM.cpp src/TCM/gearbox.cpp share/frames.cpp) 
target_link_libraries(TCM PRIVATE pthread canIO)
#set_target_properties(displayHandler PROPERTIES CXX_STANDARD 17)
add_subdirectory(ext)